--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,16 @@
-<div>
-  <p>Hello, World!</p>
-</div>
+<!doctype html>
+<html>
+<head>
+  <script type="text/javascript" src="http://platform.linkedin.com/in.js">
+    api_key: 75h8l2iluvrsm7
+  </script>
+</head>
+<body>
+  <div>
+    <p>Hello, World</p>
+    <script type="in/Login">
+      Hello, <?js= firstName ?> <?js= lastName ?>.
+    </script>
+  </div>
+</body>
+</html>
