Add linked oauth2 express session

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,7 @@
 <!doctype html>
 <html>
-<head>
-  <script type="text/javascript" src="http://platform.linkedin.com/in.js">
-    api_key: 75h8l2iluvrsm7
-  </script>
-</head>
 <body>
-  <div>
-    <p>Hello, World</p>
-    <script type="in/Login">
-      Hello, <?js= firstName ?> <?js= lastName ?>.
-    </script>
-  </div>
+  <h2>Welcome! Please log in.</h2>
+  <a href="/auth/linkedin">Login with LinkedIn</a>
 </body>
 </html>
