--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,5 @@
 <div>
   <p>Hello, World!</p>
+  <script src="./test.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </div>
