--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,15 @@
-<div>
-  <p>Hello, World!</p>
-  <script src="./test.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-</div>
+<!doctype html>
+<html>
+<body>
+
+  <h2>Welcome! Please log in.</h2>
+  <a href="/auth/linkedin">Login with LinkedIn</a>
+
+  <div>
+    <p>Hello, World!</p>
+    <script src="./test.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  </div>
+
+</body>
+</html>
