resolve classify/create cluster v5

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <div>
     <p>Hello, World!</p>
     <script src="./test.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   </div>
 
 </body>
